--- a/src/apresentacao/FrmLogin.form
+++ b/src/apresentacao/FrmLogin.form
@@ -66,7 +66,7 @@
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\postgres\Desktop\icones\check-yes-ok-icone-7166-16.png"/>
+          <Image iconType="3" name="/Icones/check-yes-ok-icone-7166-16.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Entrar"/>
       </Properties>
